<resources>
    <string name="app_name">Exercicio_1</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone</string>
    <string name="idade">Idade</string>
    <string name="enviar">Enviar</string>
    <string name="textview">TextView</string>
    <string name="nome_obrigatorio">Porfavor introduza o nome</string>
    <string name="email_obrigatorio">Por favor introduza o email</string>
    <string name="telefone_obrigatorio">Por favor introduza o telefone</string>
    <string name="idade_obrigatorio">Por favor introduza  uma dade valida</string>
</resources>